--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>L1nPark4</title>
 </head>
 <body>
-    <h1>L1nPark4 HELLO WORLD/h1>
+    <h1>L1nPark4 HELLO WORLDZ</h1>
 
 </body>
 </html>
